--- a/index.html
+++ b/index.html
@@ -1,7 +1,56 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>Creative Oblivion - The Design Home of Keith Radcliffe</title>
+<link href="co-styles.css" type="text/css" rel="stylesheet">
+<link href='http://fonts.googleapis.com/css?family=Graduate' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+<script type="text/javascript" src="js/nbw-parallax.js"></script>
+<script type="text/javascript" src="js/jquery.localscroll-1.2.7-min.js"></script>
+<script type="text/javascript" src="js/jquery.scrollTo-1.4.2-min.js"></script>
+<script type="text/javascript" src="js/jquery.inview.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+    $('#nav').localScroll();
+})
+</script>
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<ul id="nav">
+    <li><a href="#intro" title="Next Section"><img src="img/dot.png" alt="Link" /></a></li>
+    <li><a href="#second" title="Next Section"><img src="img/dot.png" alt="Link" /></a></li>
+    <li><a href="#third" title="Next Section"><img src="img/dot.png" alt="Link" /></a></li>
+    <li><a href="#fourth" title="Next Section"><img src="img/dot.png" alt="Link" /></a></li>
+    <li><a href="#fifth" title="Next Section"><img src="img/dot.png" alt="Link" /></a></li>
+    <li><a href="#contact" title="Next Section"><img src="img/dot.png" alt="Link" /></a></li>
+</ul>
+<div id="intro">
+<img src="img/creative-oblivion.svg">
+<h1>Creative Oblivion is...</h1>
+</div>
+<div id="second">
+<img src="img/vision.svg">
+<h1>Creative Vision</h1>
+</div>
+<div id="third">
+<img src="img/thinking.svg">
+<h1>Creative Thinking</h1>
+</div>
+<div id="fourth">
+<img src="img/invention.svg">
+<h1>Creative Invention</h1>
+</div>
+<div id="fifth">
+<img src="img/passion.svg">
+<h1>Creative Passion</h1>
+</div>
+<div id="contact">
+<img src="img/keith-radcliffe-web-designer-profile.jpg">
+<h1>Keith Radcliffe is Creative Oblivion</h1>
+<p>Please feel free to head on over to my <a href="http://keithradcliffe.com" target="_blank">Portfolio</a> to veiw some of my web design work.</p>
+</div>
 </body>
 </html>
